<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sosuisha</groupId>
  <artifactId>sss-image-viewer</artifactId>
  <version>1.0.6</version>
  <description>Generated from jfx-sss-fxml archetype</description>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javafx.plugin.version>0.0.8</javafx.plugin.version>
    <javafx.version>25.0.2</javafx.version>
    <maven.compiler.release>25</maven.compiler.release>
    <twelvemonkeys.version>3.13.1</twelvemonkeys.version>
    <javafx.builder.version>25.0.0</javafx.builder.version>
    <main.class>com.sosuisha.imageviewer.App</main.class>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.51.3.0</version>
    </dependency>
    <dependency>
      <groupId>io.github.sosuisen</groupId>
      <artifactId>javafx-builder-controls</artifactId>
      <version>${javafx.builder.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.sosuisen</groupId>
      <artifactId>javafx-builder-graphics</artifactId>
      <version>${javafx.builder.version}</version>
    </dependency>
    <dependency>
      <groupId>com.twelvemonkeys.imageio</groupId>
      <artifactId>imageio-bmp</artifactId>
      <version>${twelvemonkeys.version}</version>
    </dependency>
    <dependency>
      <groupId>com.twelvemonkeys.imageio</groupId>
      <artifactId>imageio-webp</artifactId>
      <version>${twelvemonkeys.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.plugin.version}</version>
        <executions>
          <execution>
            <id>jlink</id>
            <phase>package</phase>
            <goals>
              <goal>jlink</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <stripDebug>true</stripDebug>
          <noHeaderFiles>true</noHeaderFiles>
          <noManPages>true</noManPages>
          <mainClass>${main.class}</mainClass>
          <jlinkImageName>image</jlinkImageName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <outputDirectory>${project.basedir}/target/package</outputDirectory>
          <archive>
            <manifest>
              <mainClass>${main.class}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/target/package</outputDirectory>
              <excludeGroupIds>org.openjfx</excludeGroupIds>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>1.6.6</version>
        <configuration>
          <name>${project.artifactId}</name>
          <appVersion>1.0.0</appVersion>
          <vendor>${project.groupId}</vendor>
          <runtimeImage>${project.basedir}/target/image</runtimeImage>
          <input>target/package</input>
          <mainClass>${main.class}</mainClass>
          <mainJar>${project.artifactId}-${project.version}.jar</mainJar>
          <destination>target/jpackage</destination>
          <javaOptions>
            <option>-Dfile.encoding=UTF-8</option>
            <option>-XX:AOTCache=app.aot</option>
            <option>--enable-native-access=com.sosuisha.imageviewer</option>
          </javaOptions>
          <type>${jpackage.type}</type>
          <!-- Options for MSI -->
          <!--
          <winDirChooser>true</winDirChooser>
          <winMenu>true</winMenu>
          <winShortcut>true</winShortcut>
          <winShortcutPrompt>true</winShortcutPrompt>
          -->
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jpackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>unix</id>
      <activation>
        <os>
          <family>unix</family>
        </os>
      </activation>
      <properties>
        <!-- APP_IMAGE, RPM or DEB-->
        <jpackage.type>APP_IMAGE</jpackage.type>
      </properties>
    </profile>
    <profile>
      <id>win</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <properties>
        <!-- APP_IMAGE or MSI-->
        <!-- If you choose MSI, install WiX ver3 and set the path -->
        <jpackage.type>APP_IMAGE</jpackage.type>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>chmod-exe</id>
                <phase>package</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>chmod</executable>
                  <arguments>
                    <argument>777</argument>
                    <argument>${project.build.directory}/jpackage/${project.artifactId}/${project.artifactId}.exe</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <!-- DMG or PKG -->
        <jpackage.type>DMG</jpackage.type>
      </properties>
    </profile>
  </profiles>
</project>
